--- a/DesctopHITE/AppDateFolder/StyleFolder/PasswordBoxDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/PasswordBoxDictionary.xaml
@@ -13,7 +13,7 @@
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
         <Setter Property="Padding" Value="5 0 5 0"/>
-        <Setter Property="FontFamily" Value="Consolas"/>
+        <Setter Property="FontFamily" Value="\ContentFolder\FontFolder\#Comfortaa"/>
         <Setter Property="FontSize" Value="15"/>
         <Setter Property="Cursor" Value="IBeam"/>
         <Setter Property="Height" Value="45"/>
