--- a/DesctopHITE/PerformanceFolder/PageFolder/PanelMenuFolder/MenuSettingsPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/PanelMenuFolder/MenuSettingsPage.xaml
@@ -9,6 +9,7 @@
     Style="{DynamicResource MenuSpacePageStyle}">
     <StackPanel Style="{DynamicResource OtherMenuStackPanelStyle}">
         <ToggleButton
+            Margin="0 0 15 0"
             Click="AboutTheAppToggleButton_Click"
             x:Name="AboutTheAppToggleButton"
             Content="О ПРИЛОЖЕНИИ"
@@ -24,6 +25,7 @@
             Content="РАЗРАБОТЧИКИ"
             Style="{DynamicResource OtherMenuToggleButtonStyle}"/>
         <ToggleButton
+            Margin="15 0 0 0"
             Click="ScanningToggleButton_Click"
             x:Name="ScanningToggleButton"
             Content="СКАНИРОВАНИЕ"
