--- a/DesctopHITE/PerformanceFolder/PageFolder/SettingsBodyFolder/UpdateApplicationPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/SettingsBodyFolder/UpdateApplicationPage.xaml
@@ -98,6 +98,7 @@
                                 Text="Что добавили:"
                                 Margin="0 0 3.5 0"/>
                             <TextBlock
+                                TextAlignment="Left"
                                 x:Name="TitleUpDateTextBlock"
                                 Style="{DynamicResource OtherStyleTextBlock}"
                                 Margin="3.5 0 0 0"/>
