--- a/DesctopHITE/PerformanceFolder/UserControlFolder/IngredientsMenuControl.xaml
+++ b/DesctopHITE/PerformanceFolder/UserControlFolder/IngredientsMenuControl.xaml
@@ -7,6 +7,7 @@
     mc:Ignorable="d">
     <Border Style="{DynamicResource MainBorderStyle}">
         <TextBlock
+            HorizontalAlignment="Left"
             Text="{Binding Name_Ingredients}"
             Style="{DynamicResource MainStyleTextBlock}"
             Margin="10"/>
