--- a/DesctopHITE/PerformanceFolder/PageFolder/MenuPageFolder/NewMenuPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/MenuPageFolder/NewMenuPage.xaml
@@ -8,7 +8,7 @@
     mc:Ignorable="d" 
     Style="{DynamicResource BodySpacePageStyle}">
     <ScrollViewer>
-        <Grid Margin="10">
+        <Grid Margin="10 20 10 20">
             <StackPanel 
                 Orientation="Vertical"
                 HorizontalAlignment="Center"
@@ -18,10 +18,8 @@
                     Margin="0" 
                     Orientation="Horizontal">
                     <Border 
-                        Height="450"
                         Margin="3.5"
                         Visibility="Visible" 
-                        Width="570" 
                         Style="{DynamicResource BorderInformation}">
                         <Grid>
                             <Border Style="{DynamicResource NeonBorder}">
@@ -33,7 +31,7 @@
                                         BlurRadius="25"/>
                                 </Border.Effect>
                             </Border>
-                            <Grid Margin="10">
+                            <Grid Margin="20">
                                 <ScrollViewer>
                                     <StackPanel HorizontalAlignment="Center">
                                         <TextBlock
@@ -199,10 +197,8 @@
                     <Border 
                         BorderBrush="Transparent"
                         VerticalAlignment="Top"
-                        Height="450"
                         Margin="3.5"
                         Visibility="Visible" 
-                        Width="330" 
                         Style="{DynamicResource BorderInformation}">
                         <Grid>
                             <Border Style="{DynamicResource NeonBorder}">
@@ -214,7 +210,7 @@
                                         BlurRadius="25"/>
                                 </Border.Effect>
                             </Border>
-                            <Grid Margin="10">
+                            <Grid Margin="20">
                                 <StackPanel HorizontalAlignment="Center">
                                     <TextBlock
                                         Foreground="#462AD8"
@@ -280,7 +276,7 @@
                                         BlurRadius="25"/>
                                 </Border.Effect>
                             </Border>
-                            <Grid Margin="10">
+                            <Grid Margin="20">
                                 <StackPanel HorizontalAlignment="Center">
                                     <TextBlock
                                         Foreground="#462AD8"
@@ -333,7 +329,7 @@
                                         BlurRadius="25"/>
                                 </Border.Effect>
                             </Border>
-                            <Grid Margin="10">
+                            <Grid Margin="20">
                                 <StackPanel Width="430" HorizontalAlignment="Center">
                                     <TextBlock
                                         Foreground="#462AD8"
