--- a/DesctopHITE/PerformanceFolder/WindowsFolder/DeliteWorkerWindow.xaml
+++ b/DesctopHITE/PerformanceFolder/WindowsFolder/DeliteWorkerWindow.xaml
@@ -41,7 +41,7 @@
                 </Polygon>
                 <TextBlock
                     Style="{DynamicResource ControlPanelTextBlockStyle}"
-                    Text="УДАЛЕНИЕ СОТРУДНИКА"/>
+                    Text="УДАЛЕНИЕ"/>
                 <StackPanel Grid.Column="2" Style="{DynamicResource ControlPanelStackPanelStyle}">
                     <Button 
                         Style="{DynamicResource CloseControlButton}"
@@ -127,6 +127,7 @@
                                     Margin="0 0 5 0"
                                     Text="Когда добавлен сотрудник:"/>
                                 <TextBlock
+                                    Style="{DynamicResource OtherStyleTextBlock}"
                                     Margin="5 0 5 0"
                                     Text="{Binding DateWord_Worker, StringFormat='{}{0:dd/MM/yyyy}'}"/>
                             </StackPanel>
@@ -137,6 +138,7 @@
                             Style="{DynamicResource MainStyleTextBlock}">
                             <StackPanel Orientation="Vertical">
                                 <TextBlock
+                                    TextAlignment="Left"
                                     Margin="0 0 5 0"
                                     Text="Кем добавлен сотрудник:"/>
                                 <StackPanel 
@@ -144,9 +146,11 @@
                                     Margin="30 6 0 0" 
                                     Orientation="Horizontal">
                                     <TextBlock
+                                        Style="{DynamicResource OtherStyleTextBlock}"
                                         Margin="0 0 5 0"
                                         x:Name="SNMAddedWhomWorkerTextBlock"/>
                                     <TextBlock
+                                        Style="{DynamicResource OtherStyleTextBlock}"
                                         Foreground="#9a9a9a"
                                         VerticalAlignment="Bottom"
                                         Margin="5 0 0 0"
@@ -166,6 +170,7 @@
                                     Margin="0 0 5 0"
                                     Text="ИНН сотрудника:"/>
                                 <TextBlock
+                                    Style="{DynamicResource OtherStyleTextBlock}"
                                     Margin="5 0 5 0"
                                     Text="{Binding INNTable.PersonalNumber_INN}"/>
                             </StackPanel>
@@ -181,6 +186,7 @@
                                     Margin="0 0 5 0"
                                     Text="Снилс сотрудника:"/>
                                 <TextBlock
+                                    Style="{DynamicResource OtherStyleTextBlock}"
                                     Margin="5 0 5 0"
                                     Text="{Binding SnilsTable.PersonalNumber_Snils}"/>
                             </StackPanel>
@@ -196,6 +202,7 @@
                                     Margin="0 0 5 0"
                                     Text="Зарабатная карта сотрудника:"/>
                                 <TextBlock
+                                    Style="{DynamicResource OtherStyleTextBlock}"
                                     Margin="5 0 5 0"
                                     Text="{Binding SalaryCardTable.PersonalNumber_SalaryCard}"/>
                             </StackPanel>
@@ -211,6 +218,7 @@
                                     Margin="0 0 5 0"
                                     Text="медицинская книжка сотрудника:"/>
                                 <TextBlock
+                                    Style="{DynamicResource OtherStyleTextBlock}"
                                     Margin="5 0 5 0"
                                     Text="{Binding MedicalBookTable.PersonalNumber_MedicalBook}"/>
                             </StackPanel>
@@ -226,9 +234,11 @@
                                     Margin="0 0 5 0"
                                     Text="Паспорт сотрудника:"/>
                                 <TextBlock
+                                    Style="{DynamicResource OtherStyleTextBlock}"
                                     Margin="5 0 5 0"
                                     Text="{Binding PassportTable.Series_Passport}"/>
                                 <TextBlock
+                                    Style="{DynamicResource OtherStyleTextBlock}"
                                     Margin="5 0 0 0"
                                     Text="{Binding PassportTable.Number_Passport}"/>
                             </StackPanel>
