--- a/DesctopHITE/PerformanceFolder/PageFolder/MenuPageFolder/GeneralInformationMenuPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/MenuPageFolder/GeneralInformationMenuPage.xaml
@@ -1,14 +1,56 @@
-﻿<Page x:Class="DesctopHITE.PerformanceFolder.PageFolder.MenuPageFolder.GeneralInformationMenuPage"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:DesctopHITE.PerformanceFolder.PageFolder.MenuPageFolder"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="GeneralInformationMenuPage">
-
+﻿<Page 
+    x:Class="DesctopHITE.PerformanceFolder.PageFolder.MenuPageFolder.GeneralInformationMenuPage"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+    mc:Ignorable="d" 
+    Style="{DynamicResource BodySpacePageStyle}">
     <Grid>
-        
+        <StackPanel Orientation="Vertical">
+            <Border
+                Visibility="Visible"
+                Style="{DynamicResource BorderInformation}">
+                <Grid>
+                    <Border Style="{DynamicResource NeonBorder}">
+                        <Border.Effect>
+                            <DropShadowEffect
+                                Color="{StaticResource NeonHighlightingColor}"
+                                ShadowDepth="0" 
+                                Direction="0" 
+                                BlurRadius="25"/>
+                        </Border.Effect>
+                    </Border>
+                    <StackPanel 
+                        Orientation="Vertical" 
+                        Margin="10">
+                        <TextBlock
+                            Foreground="#462AD8"
+                            Text="Информация о меню"
+                            Style="{DynamicResource MainStyleTextBlock}"
+                            FontSize="30"
+                            Margin="0 10 0 10"/>
+                        <StackPanel 
+                            Margin="10" 
+                            Orientation="Vertical"
+                            VerticalAlignment="Top" 
+                            HorizontalAlignment="Left">
+                            <StackPanel 
+                                Margin="0 0 0 3.5" 
+                                Style="{DynamicResource HorizontalDataStackPanel}">
+                                <TextBlock
+                                    Margin="0 0 3.5 0"
+                                    Text="Всего:"
+                                    Style="{DynamicResource MainStyleTextBlock}"/>
+                                <TextBlock
+                                    Margin="3.5 0 0 0"
+                                    x:Name="MenuCountTextBlock"
+                                    Style="{DynamicResource OtherStyleTextBlock}"/>
+                            </StackPanel>
+                        </StackPanel>
+                    </StackPanel>
+                </Grid>
+            </Border>
+        </StackPanel>
     </Grid>
 </Page>
