--- a/DesctopHITE/PerformanceFolder/PageFolder/MenuPageFolder/GeneralInformationMenuPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/MenuPageFolder/GeneralInformationMenuPage.xaml
@@ -4,11 +4,176 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+    xmlns:UserControl ="clr-namespace:DesctopHITE.PerformanceFolder.UserControlFolder"
     mc:Ignorable="d" 
     Style="{DynamicResource BodySpacePageStyle}">
-    <Grid>
-        <StackPanel Orientation="Vertical">
+    <ScrollViewer>
+        <StackPanel Orientation="Vertical" VerticalAlignment="Top" HorizontalAlignment="Center">
+            <StackPanel
+                Margin="0 20 0 0"
+                VerticalAlignment="Top"
+                HorizontalAlignment="Center"
+                Orientation="Horizontal">
+                <Border
+                    Margin="3.5"
+                    Visibility="Visible"
+                    Style="{DynamicResource BorderInformation}">
+                    <Grid>
+                        <Border Style="{DynamicResource NeonBorder}">
+                            <Border.Effect>
+                                <DropShadowEffect
+                                    Color="{StaticResource NeonHighlightingColor}"
+                                    ShadowDepth="0" 
+                                    Direction="0" 
+                                    BlurRadius="25"/>
+                            </Border.Effect>
+                        </Border>
+                        <StackPanel 
+                            Orientation="Vertical" 
+                            Margin="20">
+                            <TextBlock
+                                Foreground="#462AD8"
+                                Text="Информация о меню"
+                                Style="{DynamicResource MainStyleTextBlock}"
+                                FontSize="30"
+                                Margin="0 10 0 10"/>
+                            <StackPanel 
+                                Margin="10" 
+                                Orientation="Vertical"
+                                VerticalAlignment="Top" 
+                                HorizontalAlignment="Left">
+                                <StackPanel 
+                                    Margin="0 0 0 3.5" 
+                                    Style="{DynamicResource HorizontalDataStackPanel}">
+                                    <TextBlock
+                                        Margin="0 0 3.5 0"
+                                        Text="Всего:"
+                                        Style="{DynamicResource MainStyleTextBlock}"/>
+                                    <TextBlock
+                                        Margin="3.5 0 0 0"
+                                        x:Name="MenuCountTextBlock"
+                                        Style="{DynamicResource OtherStyleTextBlock}"/>
+                                </StackPanel>
+                                <StackPanel 
+                                    Margin="0 3.5 0 3.5" 
+                                    Style="{DynamicResource HorizontalDataStackPanel}">
+                                    <TextBlock
+                                        Margin="0 0 3.5 0"
+                                        Text="Всего:"
+                                        Style="{DynamicResource MainStyleTextBlock}"/>
+                                    <TextBlock
+                                        Margin="3.5 0 0 0"
+                                        x:Name="CategoryCountTextBlock"
+                                        Style="{DynamicResource OtherStyleTextBlock}"/>
+                                </StackPanel>
+                                <StackPanel 
+                                    Margin="0 3.5 0 3.5" 
+                                    Style="{DynamicResource HorizontalDataStackPanel}">
+                                    <TextBlock
+                                        Margin="0 0 3.5 0"
+                                        Text="Всего:"
+                                        Style="{DynamicResource MainStyleTextBlock}"/>
+                                    <TextBlock
+                                        Margin="3.5 0 0 0"
+                                        x:Name="IngridientCountTextBlock"
+                                        Style="{DynamicResource OtherStyleTextBlock}"/>
+                                </StackPanel>
+                                <StackPanel 
+                                    Margin="0 3.5 0 3.5" 
+                                    Style="{DynamicResource HorizontalDataStackPanel}">
+                                    <TextBlock
+                                        Margin="0 0 3.5 0"
+                                        Text="Минимальная цена:"
+                                        Style="{DynamicResource MainStyleTextBlock}"/>
+                                    <TextBlock
+                                        Margin="3.5 0 0 0"
+                                        x:Name="MinPriseTextBlock"
+                                        Style="{DynamicResource OtherStyleTextBlock}"/>
+                                </StackPanel>
+                                <StackPanel 
+                                    Margin="0 3.5 0 3.5" 
+                                    Style="{DynamicResource HorizontalDataStackPanel}">
+                                    <TextBlock
+                                        Margin="0 0 3.5 0"
+                                        Text="Средняя цена:"
+                                        Style="{DynamicResource MainStyleTextBlock}"/>
+                                    <TextBlock
+                                        Margin="3.5 0 0 0"
+                                        x:Name="AveragePriseCountTextBlock"
+                                        Style="{DynamicResource OtherStyleTextBlock}"/>
+                                </StackPanel>
+                                <StackPanel 
+                                    Margin="0 3.5 0 3.5" 
+                                    Style="{DynamicResource HorizontalDataStackPanel}">
+                                    <TextBlock
+                                        Margin="0 0 3.5 0"
+                                        Text="Максимальная цена:"
+                                        Style="{DynamicResource MainStyleTextBlock}"/>
+                                    <TextBlock
+                                        Margin="3.5 0 0 0"
+                                        x:Name="MaxPriseCountTextBlock"
+                                        Style="{DynamicResource OtherStyleTextBlock}"/>
+                                </StackPanel>
+                                <StackPanel 
+                                    Margin="0 3.5 0 3.5" 
+                                    Style="{DynamicResource HorizontalDataStackPanel}">
+                                    <TextBlock
+                                        Margin="0 0 3.5 0"
+                                        Text="Общая стоимость:"
+                                        Style="{DynamicResource MainStyleTextBlock}"/>
+                                    <TextBlock
+                                        Margin="3.5 0 0 0"
+                                        x:Name="GeneralPriseTextBlock"
+                                        Style="{DynamicResource OtherStyleTextBlock}"/>
+                                </StackPanel>
+                            </StackPanel>
+                        </StackPanel>
+                    </Grid>
+                </Border>
+                <Border
+                    Margin="3.5"
+                    Visibility="Visible"
+                    Style="{DynamicResource BorderInformation}">
+                    <Grid>
+                        <Border Style="{DynamicResource NeonBorder}">
+                            <Border.Effect>
+                                <DropShadowEffect
+                                    Color="{StaticResource NeonHighlightingColor}"
+                                    ShadowDepth="0" 
+                                    Direction="0" 
+                                    BlurRadius="25"/>
+                            </Border.Effect>
+                        </Border>
+                        <StackPanel 
+                            Orientation="Vertical" 
+                            Margin="20">
+                            <TextBlock
+                                Foreground="#462AD8"
+                                Text="Информация о категории"
+                                Style="{DynamicResource MainStyleTextBlock}"
+                                FontSize="30"
+                                Margin="0 10 0 10"/>
+                            <ListView 
+                                MinHeight="0"
+                                MaxHeight="150"
+                                Height="Auto"
+                                ItemContainerStyle="{StaticResource NoSelected}"
+                                x:Name="ViewMenuIngridientListView"
+                                Margin="10" 
+                                VerticalAlignment="Top" 
+                                HorizontalAlignment="Left">
+                                <ListView.ItemTemplate>
+                                    <DataTemplate>
+                                        <UserControl:IngredientsMenuControl/>
+                                    </DataTemplate>
+                                </ListView.ItemTemplate>
+                            </ListView>
+                        </StackPanel>
+                    </Grid>
+                </Border>
+            </StackPanel>
             <Border
+                Margin="3.5"
                 Visibility="Visible"
                 Style="{DynamicResource BorderInformation}">
                 <Grid>
@@ -23,34 +188,31 @@
                     </Border>
                     <StackPanel 
                         Orientation="Vertical" 
-                        Margin="10">
+                        Margin="20">
                         <TextBlock
                             Foreground="#462AD8"
-                            Text="Информация о меню"
+                            Text="Информация о категории"
                             Style="{DynamicResource MainStyleTextBlock}"
                             FontSize="30"
                             Margin="0 10 0 10"/>
-                        <StackPanel 
+                        <ListView 
+                            MinHeight="0"
+                            MaxHeight="300"
+                            Height="Auto"
+                            ItemContainerStyle="{StaticResource NoSelected}"
+                            x:Name="ViewMenuCategoryListView"
                             Margin="10" 
-                            Orientation="Vertical"
                             VerticalAlignment="Top" 
                             HorizontalAlignment="Left">
-                            <StackPanel 
-                                Margin="0 0 0 3.5" 
-                                Style="{DynamicResource HorizontalDataStackPanel}">
-                                <TextBlock
-                                    Margin="0 0 3.5 0"
-                                    Text="Всего:"
-                                    Style="{DynamicResource MainStyleTextBlock}"/>
-                                <TextBlock
-                                    Margin="3.5 0 0 0"
-                                    x:Name="MenuCountTextBlock"
-                                    Style="{DynamicResource OtherStyleTextBlock}"/>
-                            </StackPanel>
-                        </StackPanel>
+                            <ListView.ItemTemplate>
+                                <DataTemplate>
+                                    <UserControl:ViewMenuCategoryUserControl/>
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                        </ListView>
                     </StackPanel>
                 </Grid>
             </Border>
         </StackPanel>
-    </Grid>
+    </ScrollViewer>
 </Page>
