--- a/DesctopHITE/AppDateFolder/StyleFolder/ComboBoxDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/ComboBoxDictionary.xaml
@@ -38,6 +38,7 @@
     </ControlTemplate>
     
     <Style x:Key="{x:Type ComboBox}" TargetType="{x:Type ComboBox}">
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="SnapsToDevicePixels" Value="true"/>
         <Setter Property="OverridesDefaultStyle" Value="true"/>
         <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Auto"/>
