--- a/DesctopHITE/AppDateFolder/StyleFolder/BorderDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/BorderDictionary.xaml
@@ -9,6 +9,7 @@
         <Setter Property="BorderBrush" Value="#2a2a2a"/>
         <Setter Property="BorderThickness" Value="2"/>
         <Setter Property="CornerRadius" Value="10"/>
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
     </Style>
     
     <Style x:Key="ShadowBorder" TargetType="Border">
@@ -18,6 +19,7 @@
         <Setter Property="BorderBrush" Value="Transparent"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="CornerRadius" Value="10"/>
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
     </Style>
     
     <Style x:Key="OtherShadowBorder" TargetType="Border" BasedOn="{StaticResource MainBorderStyle}">
@@ -33,6 +35,7 @@
         <Setter Property="CornerRadius" Value="0"/>
         <Setter Property="Visibility" Value="Collapsed"/>
         <Setter Property="Margin" Value="0 10 0 10"/>
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
     </Style>
 
     <Style x:Key="NeonBorder" TargetType="Border">
@@ -41,6 +44,7 @@
         <Setter Property="BorderThickness" Value="2"/>
         <Setter Property="CornerRadius" Value="10"/>
         <Setter Property="Margin" Value="0"/>
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
     </Style>
 
     <Style x:Key="MaskBorder" TargetType="Border">
@@ -48,5 +52,6 @@
         <Setter Property="HorizontalAlignment" Value="Center"/>
         <Setter Property="Opacity" Value="1"/>
         <Setter Property="BorderBrush" Value="#121212"/>
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
     </Style>
 </ResourceDictionary>
