--- a/DesctopHITE/AppDateFolder/StyleFolder/ButtonDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/ButtonDictionary.xaml
@@ -5,6 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     
     <Style TargetType="Button">
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="BorderBrush" Value="Transparent"/>
         <Setter Property="Background" Value="#462AD8"/>
@@ -37,6 +38,7 @@
     </Style>
     
     <Style TargetType="Button" x:Key="OtherButtonStyle">
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="BorderThickness" Value="1"/>
         <Setter Property="BorderBrush" Value="#f5f5f5"/>
         <Setter Property="Background" Value="Transparent"/>
@@ -69,6 +71,7 @@
     </Style>
     
     <Style x:Key="PasswordButtonStyle" TargetType="Button">
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="BorderBrush" Value="Transparent"/>
         <Setter Property="Foreground" Value="#f5f5f5"/>
@@ -101,6 +104,7 @@
     </Style>
 
     <Style TargetType="Button" x:Key="DeliteButtonStyle">
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="BorderBrush" Value="Transparent"/>
         <Setter Property="Background" Value="#ff073a"/>
@@ -134,6 +138,7 @@
 
     <!--#region ControlPanel-->
     <Style x:Key="ControlPanelButtonStyle" TargetType="Button" >
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="Foreground" Value="#a2a2a2"/>
         <Setter Property="BorderBrush" Value="Transparent"/>
