--- a/DesctopHITE/AppDateFolder/StyleFolder/HyperlinkDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/HyperlinkDictionary.xaml
@@ -5,6 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <Style TargetType="Hyperlink" x:Key="Hyperlink">
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="TextDecorations" Value="Underline"/>
         <Setter Property="FontStyle" Value="Italic"/>
         <Setter Property="FontFamily" Value="\ContentFolder\FontFolder\#Jura"/>
