--- a/DesctopHITE/AppDateFolder/StyleFolder/ImageDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/ImageDictionary.xaml
@@ -5,6 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     
     <Style x:Key="QrImage" TargetType="Image">
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="Width" Value="300"/>
         <Setter Property="Height" Value="300"/>
     </Style>
