--- a/DesctopHITE/AppDateFolder/StyleFolder/ListViewDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/ListViewDictionary.xaml
@@ -5,6 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <Style TargetType="ListView">
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="VirtualizingPanel.ScrollUnit" Value="Pixel"/>
         <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Disabled"/>
         <Setter Property="Background" Value="Transparent"/>
@@ -13,6 +14,7 @@
     </Style>
 
     <Style x:Key="ListViewItemSelected" TargetType="ListViewItem">
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="Margin" Value="3.5"/>
         <Setter Property="Cursor" Value="Hand"/>
         <Setter Property="Template">
@@ -65,6 +67,7 @@
     </Style>
 
     <Style x:Key="ListViewItemSelectedMunuList" TargetType="ListViewItem">
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="Margin" Value="15 3.5 15 3.5"/>
         <Setter Property="Cursor" Value="Hand"/>
         <Setter Property="Template">
@@ -117,6 +120,7 @@
     </Style>
 
     <Style x:Key="MenuCashItemSelected" TargetType="ListViewItem">
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="Margin" Value="0 1.5 0 1.5"/>
         <Setter Property="Cursor" Value="Hand"/>
         <Setter Property="Foreground" Value="#9a9a9a"/>
@@ -159,6 +163,7 @@
     </Style>
 
     <Style x:Key="NoSelected" TargetType="ListViewItem">
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="Margin" Value="0 5 0 5"/>
         <Setter Property="VerticalAlignment" Value="Top"/>
         <Setter Property="HorizontalAlignment" Value="Left"/>
