--- a/DesctopHITE/AppDateFolder/StyleFolder/MenuDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/MenuDictionary.xaml
@@ -2,6 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style x:Key="Menu" TargetType="Menu">
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="Foreground" Value="#a2a2a2"/>
         <Setter Property="BorderBrush" Value="Transparent"/>
@@ -16,6 +17,7 @@
     </Style>
 
     <Style x:Key="ParentMenuItem" TargetType="MenuItem">
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="Cursor" Value="Hand"/>
         <Setter Property="FontFamily" Value="\ContentFolder\FontFolder\#Jura"/>
         <Setter Property="Template">
@@ -58,6 +60,7 @@
     </Style>
 
     <Style x:Key="MenuButton" TargetType="MenuItem">
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="Foreground" Value="#a2a2a2"/>
         <Setter Property="BorderBrush" Value="Transparent"/>
