--- a/DesctopHITE/AppDateFolder/StyleFolder/PasswordBoxDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/PasswordBoxDictionary.xaml
@@ -5,6 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     
     <Style x:Key="MainPasswordBoxStyle" TargetType="PasswordBox">
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="Foreground" Value="#8c8a8c"/>
         <Setter Property="Background" Value="#202020"/>
         <Setter Property="CaretBrush" Value="#f5f5f5"/>
