--- a/DesctopHITE/AppDateFolder/StyleFolder/StackPanelDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/StackPanelDictionary.xaml
@@ -5,12 +5,14 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     
     <Style x:Key="ControlPanelStackPanelStyle" TargetType="StackPanel"> <!--Для кнопок управления-->
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="Orientation" Value="Horizontal"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="HorizontalAlignment" Value="Right"/>
     </Style>
     
     <Style x:Key="MainMenuStackPanelStyle" TargetType="StackPanel"> <!--Для главного миню-->
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="Orientation" Value="Vertical"/>
         <Setter Property="VerticalAlignment" Value="Top"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
@@ -18,6 +20,7 @@
     </Style>
     
     <Style x:Key="MenuContentStackPanelStyle" TargetType="StackPanel"> <!--Для контента внутри кнопки-->
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="Orientation" Value="Horizontal"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
@@ -25,6 +28,7 @@
     </Style>
     
     <Style x:Key="OtherMenuStackPanelStyle" TargetType="StackPanel"> <!--Для меню внутри страницы, которые вызываются главным меню-->
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="Orientation" Value="Horizontal"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="HorizontalAlignment" Value="Left"/>
@@ -32,6 +36,7 @@
     </Style>
     
     <Style x:Key="TextBlockDominatesTextBoxStackPanel" TargetType="StackPanel"> <!--TextBlock доминирует над TextBox-->
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="Orientation" Value="Vertical"/>
         <Setter Property="VerticalAlignment" Value="Top"/>
         <Setter Property="HorizontalAlignment" Value="Left"/>
@@ -39,6 +44,7 @@
     </Style>
 
     <Style x:Key="HorizontalDataStackPanel" TargetType="StackPanel"> <!--TextBlock доминирует над TextBox-->
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="Orientation" Value="Horizontal"/>
         <Setter Property="VerticalAlignment" Value="Top"/>
         <Setter Property="HorizontalAlignment" Value="Left"/>
