--- a/DesctopHITE/AppDateFolder/StyleFolder/TextBlockDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/TextBlockDictionary.xaml
@@ -5,6 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     
     <Style x:Key="ControlPanelTextBlockStyle" TargetType="TextBlock">
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="Foreground" Value="#f5f5f5"/>
         <Setter Property="FontFamily" Value="\ContentFolder\FontFolder\#Comfortaa"/>
         <Setter Property="FontSize" Value="15"/>
@@ -13,6 +14,7 @@
     </Style>
     
     <Style x:Key="IconTextBlockStyle" TargetType="TextBlock">
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="Foreground" Value="#f5f5f5"/>
         <Setter Property="FontFamily" Value="\ContentFolder\FontFolder\#Material-Design-Iconic-Font"/>
         <Setter Property="FontSize" Value="20"/>
@@ -23,6 +25,7 @@
     </Style>
     
     <Style x:Key="IconButtonTextBlockStyle" TargetType="TextBlock">
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="FontFamily" Value="\ContentFolder\FontFolder\#Material-Design-Iconic-Font"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="HorizontalAlignment" Value="Left"/>
@@ -31,6 +34,7 @@
     </Style>
     
     <Style x:Key="HintTextBlockStyle" TargetType="TextBlock">
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="Foreground" Value="#8c8a8c"/>
         <Setter Property="FontFamily" Value="\ContentFolder\FontFolder\#Comfortaa"/>
         <Setter Property="TextWrapping" Value="Wrap"/>
@@ -45,6 +49,7 @@
     </Style>
     
     <Style x:Key="MainStyleTextBlock" TargetType="TextBlock">
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="Foreground" Value="#f5f5f5"/>
         <Setter Property="FontFamily" Value="\ContentFolder\FontFolder\#Comfortaa"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
