--- a/DesctopHITE/AppDateFolder/StyleFolder/ToggleButtonDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/ToggleButtonDictionary.xaml
@@ -4,6 +4,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style x:Key="MainMenuToggleButtonStyle" TargetType="ToggleButton">
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="BorderBrush" Value="Transparent"/>
         <Setter Property="Foreground" Value="#9a9a9a"/>
@@ -65,6 +66,7 @@
         </Setter>
     </Style>
     <Style x:Key="MainToggleButton" TargetType="ToggleButton">
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="BorderBrush" Value="Transparent"/>
         <Setter Property="Background" Value="#462AD8"/>
