--- a/DesctopHITE/AppDateFolder/StyleFolder/WindowsDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/WindowsDictionary.xaml
@@ -5,6 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <Style x:Key="MainWinwosStyle" TargetType="Window">
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="WindowStyle" Value="None"/>
         <Setter Property="ResizeMode" Value="CanMinimize"/>
         <Setter Property="AllowsTransparency" Value="True"/>
@@ -16,6 +17,7 @@
     </Style>
 
     <Style x:Key="MainCashWinwosStyle" TargetType="Window">
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="WindowState" Value="Maximized"/>
         <Setter Property="WindowStyle" Value="None"/>
         <Setter Property="ResizeMode" Value="NoResize"/>
