--- a/DesctopHITE/PerformanceFolder/PageFolder/MenuPageFolder/ListMenuPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/MenuPageFolder/ListMenuPage.xaml
@@ -6,6 +6,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
     xmlns:UserControl ="clr-namespace:DesctopHITE.PerformanceFolder.UserControlFolder"
     mc:Ignorable="d" 
+    KeyUp="KeyboardShortcuts"
     IsVisibleChanged="Page_IsVisibleChanged"
     Style="{DynamicResource BodySpacePageStyle}">
     <Grid>
@@ -50,11 +51,29 @@
                 VerticalAlignment="Center"
                 HorizontalAlignment="Right">
                 <Button
+                    x:Name="NewMenuButton"
+                    Click="NewMenuButton_Click"
+                    Width="180"
+                    Height="45"
+                    Margin="0 0 5 0">
+                    <StackPanel
+                        Margin="0 2 0 2" 
+                        Orientation="Horizontal">
+                        <TextBlock
+                            Text="&#xf278;" 
+                            Style="{DynamicResource IconTextBlockStyle}"
+                            Margin="0 0 5 0"/>
+                        <TextBlock
+                            Margin="5 0 0 0"
+                            Text="Добавить"/>
+                    </StackPanel>
+                </Button>
+                <Button
                     x:Name="EditButton"
                     Click="EventEditMunu"
                     Width="220"
                     Height="45"
-                    Margin="0 0 5 0">
+                    Margin="5 0 5 0">
                     <StackPanel
                         Margin="0 2 0 2" 
                         Orientation="Horizontal">
@@ -68,6 +87,7 @@
                     </StackPanel>
                 </Button>
                 <Button
+                    Margin="5 0 0 0"
                     Style="{DynamicResource DeliteButtonStyle}"
                     x:Name="DeliteButton"
                     Click="EventDeleteMenu"
