--- a/DesctopHITE/PerformanceFolder/UserControlFolder/ViewMenuCategoryUserControl.xaml
+++ b/DesctopHITE/PerformanceFolder/UserControlFolder/ViewMenuCategoryUserControl.xaml
@@ -5,58 +5,27 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
     mc:Ignorable="d">
-    <StackPanel Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Left">
+    <Grid VerticalAlignment="Center" HorizontalAlignment="Left">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
         <TextBlock
+            Grid.Row="0"
             HorizontalAlignment="Left"
             TextAlignment="Left"
             Margin="0 0 0 0"
             Text="{Binding Title_MenuCategory}"
             Style="{DynamicResource MainStyleTextBlock}"
             FontSize="18"/>
-        <StackPanel Margin="10 0 0 0" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Left">
-            <StackPanel Margin="0 0 10 0" Orientation="Horizontal">
-                <TextBlock
-                    TextAlignment="Left"
-                    Margin="0 0 2 0"
-                    Text="мин. цена"
-                    Style="{DynamicResource MainStyleTextBlock}"
-                    FontSize="15"/>
-                <TextBlock
-                    TextAlignment="Left"
-                    Margin="2 0 0 0"
-                    Text="{Binding MinPrise_ViewMenuCategory}"
-                    Style="{DynamicResource OtherStyleTextBlock}"
-                    FontSize="15"/>
-            </StackPanel>
-            <StackPanel Margin="10 0 10 0" Orientation="Horizontal">
-                <TextBlock
-                    TextAlignment="Left"
-                    Margin="0 0 2 0"
-                    Text="ср. цена"
-                    Style="{DynamicResource MainStyleTextBlock}"
-                    FontSize="15"/>
-                <TextBlock
-                    TextAlignment="Left"
-                    Margin="2 0 0 0"
-                    Text="{Binding AvgPrise_ViewMenuCategory, StringFormat= N2}"
-                    Style="{DynamicResource OtherStyleTextBlock}"
-                    FontSize="15"/>
-            </StackPanel>
-            <StackPanel Margin="10 0 10 0" Orientation="Horizontal">
-                <TextBlock
-                    TextAlignment="Left"
-                    Margin="0 0 2 0"
-                    Text="макс. цена"
-                    Style="{DynamicResource MainStyleTextBlock}"
-                    FontSize="15"/>
-                <TextBlock
-                    TextAlignment="Left"
-                    Margin="2 0 0 0"
-                    Text="{Binding MaxPrise_ViewMenuCategory}"
-                    Style="{DynamicResource OtherStyleTextBlock}"
-                    FontSize="15"/>
-            </StackPanel>
-            <StackPanel Margin="10 0 0 0" Orientation="Horizontal">
+        <Grid Margin="10 0 0 0" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Left">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="280"/>
+                <ColumnDefinition Width="180"/>
+                <ColumnDefinition Width="180"/>
+                <ColumnDefinition Width="200"/>
+            </Grid.ColumnDefinitions>
+            <StackPanel Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Left" Orientation="Horizontal">
                 <TextBlock
                     TextAlignment="Left"
                     Margin="0 0 2 0"
@@ -70,6 +39,48 @@
                     Style="{DynamicResource OtherStyleTextBlock}"
                     FontSize="15"/>
             </StackPanel>
-        </StackPanel>
-    </StackPanel>
+            <StackPanel Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left" Orientation="Horizontal">
+                <TextBlock
+                    TextAlignment="Left"
+                    Margin="0 0 2 0"
+                    Text="мин. цена"
+                    Style="{DynamicResource MainStyleTextBlock}"
+                    FontSize="15"/>
+                <TextBlock
+                    TextAlignment="Left"
+                    Margin="2 0 0 0"
+                    Text="{Binding MinPrise_ViewMenuCategory}"
+                    Style="{DynamicResource OtherStyleTextBlock}"
+                    FontSize="15"/>
+            </StackPanel>
+            <StackPanel Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Left" Orientation="Horizontal">
+                <TextBlock
+                    TextAlignment="Left"
+                    Margin="0 0 2 0"
+                    Text="ср. цена"
+                    Style="{DynamicResource MainStyleTextBlock}"
+                    FontSize="15"/>
+                <TextBlock
+                    TextAlignment="Left"
+                    Margin="2 0 0 0"
+                    Text="{Binding AvgPrise_ViewMenuCategory, StringFormat= N2}"
+                    Style="{DynamicResource OtherStyleTextBlock}"
+                    FontSize="15"/>
+            </StackPanel>
+            <StackPanel Grid.Column="3" VerticalAlignment="Center" HorizontalAlignment="Left" Orientation="Horizontal">
+                <TextBlock
+                    TextAlignment="Left"
+                    Margin="0 0 2 0"
+                    Text="макс. цена"
+                    Style="{DynamicResource MainStyleTextBlock}"
+                    FontSize="15"/>
+                <TextBlock
+                    TextAlignment="Left"
+                    Margin="2 0 0 0"
+                    Text="{Binding MaxPrise_ViewMenuCategory}"
+                    Style="{DynamicResource OtherStyleTextBlock}"
+                    FontSize="15"/>
+            </StackPanel>
+        </Grid>
+    </Grid>
 </UserControl>
