--- a/DesctopHITE/PerformanceFolder/PageFolder/MenuPageFolder/NewMenuPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/MenuPageFolder/NewMenuPage.xaml
@@ -10,6 +10,7 @@
     <ScrollViewer>
         <Grid Margin="10 20 10 20">
             <StackPanel 
+                Margin="0 10 0 0"
                 Orientation="Vertical"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Center">
@@ -365,32 +366,59 @@
                         </Grid>
                     </Border>
                 </StackPanel>
-                <Button
-                    HorizontalAlignment="Center"
+                <StackPanel 
                     VerticalAlignment="Bottom"
-                    Margin="3.5"
-                    x:Name="NewMenuButton"
-                    Click="NewMenuButton_Click"
-                    Height="45"
-                    Width="380">
-                    <StackPanel Margin="0 2 0 2" Orientation="Horizontal">
-                        <TextBlock
-                            x:Name="TitleIconNewMenuTextBlock1"
-                            Text="&#xf1ff;" 
-                            Style="{DynamicResource IconTextBlockStyle}"
-                            Margin="0 0 5 0"/>
-                        <TextBlock
-                            Visibility="Collapsed"
-                            x:Name="TitleIconNewMenuTextBlock2"
-                            Text="&#xf158;" 
-                            Style="{DynamicResource IconTextBlockStyle}"
-                            Margin="0 0 5 0"/>
-                        <TextBlock
-                            x:Name="TitleTextNewMenuTextBlock"
-                            Margin="5 0 0 0"
-                            Text="Добавить новое блюдо"/>
-                    </StackPanel>
-                </Button>
+                    HorizontalAlignment="Center"
+                    Margin="0 10 0 10"
+                    Orientation="Horizontal">
+                    <Button
+                        Width="246"
+                        Height="50"
+                        Margin="0 0 3.5 0"
+                        Grid.Column="0"
+                        VerticalAlignment="Top"
+                        HorizontalAlignment="Left"
+                        Click="GoBackButton_Click"
+                        Style="{DynamicResource OtherButtonStyle}">
+                        <StackPanel
+                            Margin="0 2 0 2" 
+                            Orientation="Horizontal">
+                            <TextBlock
+                                Text="&#xf2ff;" 
+                                Style="{DynamicResource IconTextBlockStyle}"
+                                Margin="0 0 5 0"/>
+                            <TextBlock
+                                Margin="5 0 0 0"
+                                Text="Назад"/>
+                        </StackPanel>
+                    </Button>
+                    <Button
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Bottom"
+                        Margin="3.5 0 0 0"
+                        x:Name="NewMenuButton"
+                        Click="NewMenuButton_Click"
+                        Height="50"
+                        Width="380">
+                        <StackPanel Margin="0 2 0 2" Orientation="Horizontal">
+                            <TextBlock
+                                x:Name="TitleIconNewMenuTextBlock1"
+                                Text="&#xf1ff;" 
+                                Style="{DynamicResource IconTextBlockStyle}"
+                                Margin="0 0 5 0"/>
+                            <TextBlock
+                                Visibility="Collapsed"
+                                x:Name="TitleIconNewMenuTextBlock2"
+                                Text="&#xf158;" 
+                                Style="{DynamicResource IconTextBlockStyle}"
+                                Margin="0 0 5 0"/>
+                            <TextBlock
+                                x:Name="TitleTextNewMenuTextBlock"
+                                Margin="5 0 0 0"
+                                Text="Добавить новое блюдо"/>
+                        </StackPanel>
+                    </Button>
+                </StackPanel>
             </StackPanel>
         </Grid>
     </ScrollViewer>
