--- a/DesctopHITE/PerformanceFolder/PageFolder/MenuPageFolder/ListCategoryPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/MenuPageFolder/ListCategoryPage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page 
-    x:Class="DesctopHITE.PerformanceFolder.PageFolder.MenuPageFolder.ListIngridientPage"
+    x:Class="DesctopHITE.PerformanceFolder.PageFolder.MenuPageFolder.ListCategoryPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -50,8 +50,8 @@
                 VerticalAlignment="Center"
                 HorizontalAlignment="Right">
                 <Button
-                    x:Name="NewIngredientsButton"
-                    Click="NewIngredientsButton_Click"
+                    x:Name="NewCategoryButton"
+                    Click="NewCategoryButton_Click"
                     Width="180"
                     Height="45"
                     Margin="0 0 5 0">
@@ -69,7 +69,7 @@
                 </Button>
                 <Button
                     x:Name="EditButton"
-                    Click="EventEditIngredients"
+                    Click="EventEditCategory"
                     Width="220"
                     Height="45"
                     Margin="5 0 5 0">
@@ -89,7 +89,7 @@
                     Margin="5 0 0 0"
                     Style="{DynamicResource DeliteButtonStyle}"
                     x:Name="DeliteButton"
-                    Click="EventDeleteIngredients"
+                    Click="EventEditCategory"
                     Width="180"
                     Height="45">
                     <StackPanel Margin="0 2 0 2" Orientation="Horizontal">
@@ -113,16 +113,28 @@
                 HorizontalAlignment="Center"
                 Style="{DynamicResource HintTextBlockStyle}"/>
             <ListView
-                MouseDoubleClick ="IngridientListListView_MouseDoubleClick"
-                SelectionChanged ="IngridientListListView_SelectionChanged"
+                MouseDoubleClick ="CategoryListListView_MouseDoubleClick"
+                SelectionChanged ="CategoryListListView_SelectionChanged"
                 Background="Transparent"
-                x:Name="IngridientListListView"
+                x:Name="CategoryListListView"
                 Margin="0"
                 ItemContainerStyle="{StaticResource ListViewItemSelectedMunuList}">
                 <ListBox.ContextMenu>
                     <ContextMenu>
+                        <MenuItem
+                            Click="EventViewDataCategory"
+                            InputGestureText="Ctrl+F1"
+                            Header="Просмотреть">
+                            <MenuItem.Icon>
+                                <TextBlock
+                                    Foreground="#462AD8"
+                                    Text="&#xf1f7;" 
+                                    Style="{DynamicResource IconTextBlockStyle}"
+                                    Margin="0"/>
+                            </MenuItem.Icon>
+                        </MenuItem>
                         <MenuItem 
-                            Click="EventEditIngredients"
+                            Click="EventEditCategory"
                             InputGestureText="Ctrl+F2"
                             Header="Редактировать">
                             <MenuItem.Icon>
@@ -135,7 +147,7 @@
                         </MenuItem>
                         <Separator/>
                         <MenuItem 
-                            Click="EventDeleteIngredients"
+                            Click="EventDeleteCategory"
                             InputGestureText="Ctrl+Delete"
                             Header="Удалить">
                             <MenuItem.Icon>
@@ -150,7 +162,7 @@
                 </ListBox.ContextMenu>
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <UserControl:IngredientsMenuControl/>
+                        <UserControl:CategoryUserControl/>
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
